# br_med_challenge

./: .coveragerc  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
currency_exchange/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/: CHANGELOG.md  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx
exchange_rates/: models.py
exchange_rates/core/entities/: __init__.py  currency.py  rate.py
exchange_rates/core/interfaces/vatcomply/: client.py
exchange_rates/core/repositories/: currency_repository.py  rate_repository.py
exchange_rates/core/repositories/models/: base.py
exchange_rates/core/services/: currency_service.py  rates_service.py
exchange_rates/infra/repositories/: django_currency_repository.py  django_rate_repository.py
exchange_rates/infra/serializers/: currency_response_serializer.py  rates_request_serializer.py  rates_response_serializer.py
exchange_rates/infra/views/: rates_view.py
exchange_rates/migrations/: 0001_initial.py
fixtures/: currencies.json
tests/entities/: test_currency.py  test_rate.py
tests/interfaces/: test_vat_client.py
tests/service/: test_currency_service.py  test_rate_service.py
tests/views/: test_rate.py
