[tool.poetry]
name = "br-med-challenge"
version = "0.1.0"
description = ""
authors = ["garusocruz <garusotec@gmail.com>"]
license = "https://github.com/garusocruz/br_med_challenge/blob/main/LICENSE"
readme = "https://github.com/garusocruz/br_med_challenge/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
