[tool.poetry]
name = "br-med-challenge"
version = "0.1.0"
description = ""
authors = ["garusocruz <garusotec@gmail.com>"]
license = "https://github.com/garusocruz/br_med_challenge/blob/main/LICENSE"
readme = "https://github.com/garusocruz/br_med_challenge/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.7"
djangorestframework = "^3.14.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ipdb = "^0.13.13"
coverage = "^7.3.0"
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
